# ProyectoFinal-Grupo5-VariadorDeFrecuencia

./: README.md
Documentos/: .gitignore
Hardware/: Hardware design.md  ListaComponentes.xlsx
Modelo3D/: Bornera3P.SLDPRT  Bornera8P.SLDPRT  Boton.SLDPRT  Cobertor interno.SLDPRT  ConverterPCB.step  Cooler.SLDPRT  Covertor bornera.sldprt  CovertorFrontal.SLDPRT  Cuerpo.SLDPRT  Difusor.SLDPRT  Disipador.SLDPRT  InterfacePCB.sldprt  InterfacePCB.step  InverterPCB.sldprt  InverterPCB.step  PlacaConversor.SLDPRT  Soporte display.sldprt  SoporteDisipador.SLDPRT  (+5 more)
Software/LVFV_ESP32/main/: CMakeLists.txt  LVFV_system.h  main.c
Software/LVFV_ESP32/main/adc/: adc.c  adc.h
Software/LVFV_ESP32/main/display/: display.c  display.h  sh1106_graphics.c  sh1106_graphics.h  sh1106_i2c.c  sh1106_i2c.h
Software/LVFV_ESP32/main/io_control/: MCP23017.c  MCP23017.h  io_control.c  io_control.h  mcp23017_defs.h
Software/LVFV_ESP32/main/nvs/: nvs.c  nvs.h
Software/LVFV_ESP32/main/rtc/: rtc.c  rtc.h
Software/LVFV_ESP32/main/system/: sysAdmin.c  sysAdmin.h  sysControl.c  sysControl.h
Software/LVFV_ESP32/main/wifi/: form.c  form.h  wifi.c  wifi.h
Software/SH1106/main/: CMakeLists.txt  LVFV_system.h  RTC.c  STM32_comm.c  display.c  io_control.c  main.c  nvs.c  sh1106.c  sh1106.h  sh1106_i2c.c  variable_admin.h
Software/SH1106/main/ADC/: adc.c
Software/SH1106/main/MCP23017/: MCP23017.c  MCP23017.h  io_control.h
Software/SH1106/main/SH1106/: display.h  display_typedef.h  sh1106_graphics.c  sh1106_graphics.h  sh1106_i2c.c  sh1106_i2c.h
Software/SH1106/main/SPI/: SPI_module.h
(+1419 files in other folders)
